# lottery-optimization-engine

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: mega_sena_virada_example.yaml  quina_sao_joao_budget_19140.yaml
docs/: ARCHITECTURE.md  CHECKLIST_PRE_REGISTRO.md  DECISIONS.md  MATH_MODEL.md  ROADMAP.md  RUNBOOK_BOLAO.md  SPEC.md  TESTING.md
lottery_optimizer/: __init__.py  benchmark.py  disclaimer.py  runner.py
lottery_optimizer/algorithms/: __init__.py  base.py  genetic.py  grasp.py  hybrid.py  local_search.py  random_balanced.py  simulated_annealing.py
lottery_optimizer/cli/: __init__.py  main.py
lottery_optimizer/core/: __init__.py  combinations.py  cost.py  coverage.py  game.py  portfolio.py  pricing.py  probability.py  ticket.py  validation.py
lottery_optimizer/export/: __init__.py  charts.py  csv_exporter.py  excel_exporter.py  report_data.py  report_exporter.py
lottery_optimizer/games/: __init__.py  registry.py
lottery_optimizer/generators/: __init__.py  balanced_random.py  base.py  diversity.py  greedy_coverage.py  (+2 more)
scripts/: dry_run_bolao.py  run_mega_sena_example.py  run_mega_sena_virada.py  run_quina_example.py  run_quina_sao_joao.py
tests/: conftest.py  test_audit_math.py  test_benchmark.py  test_cli.py  test_combinatorics.py  test_config.py  test_cost.py  test_coverage.py  test_disclaimer.py  test_dry_run_bolao.py  test_exports.py  test_full_verification.py  test_game_spec.py  test_generators.py  test_metrics.py  test_metrics_classes.py  test_optimizers.py  test_performance.py  test_portfolio.py  test_probability.py  test_random_balanced.py  test_registry.py  test_reproducibility.py  test_review.py  test_run_mega_sena_virada.py  test_run_quina_sao_joao.py  test_spec.py  test_ticket.py
(+23 files in other folders)
