[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lottery-optimization-engine"
version = "0.1.0"
description = "Engine generica de otimizacao de cobertura combinatoria para loterias"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "hypothesis>=6", "ruff>=0.5"]
# Deps de runtime entram quando os modulos que as usam chegam:
# numpy (metrics, Bloco 3), openpyxl (export Excel, Bloco 6).

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "tests"]
