[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lottery-optimization-engine"
version = "0.1.0"
description = "Engine generica de otimizacao de cobertura combinatoria para loterias"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "openpyxl>=3.1",
    "matplotlib>=3.8",
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "hypothesis>=6", "ruff>=0.5"]
accel = ["scipy>=1.11", "ortools>=9.10", "numba>=0.59"]

[project.scripts]
lottery-optimizer = "lottery_optimizer.cli.main:app"

[tool.setuptools.packages.find]
include = ["lottery_optimizer*"]

[tool.setuptools.package-data]
lottery_optimizer = ["games/configs/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
